[package]
name = "routbox"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2.0"
once_cell = "1.19.0"
enigo = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
thiserror = "2.0.12"
rusb = "0.9.4"
